--- a/webapp/src/main/resources/login.html
+++ b/webapp/src/main/resources/login.html
@@ -2,19 +2,41 @@
 <html>
 <head>
     <title>Connexion</title>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
-<h1>Connexion</h1>
-<form action="/users/login" method="post">
-    <label for="email">Email :</label>
-    <input type="email" id="email" name="email" required><br><br>
+<div id="header"></div>  <!-- Conteneur du header -->
+<div class="form-container">
+    <h1>Connexion</h1>
+    <form action="/users/login" method="post">
+        <div class="form-group">
+            <label for="email">Email :</label>
+            <input type="email" id="email" name="email" required>
+        </div>
 
-    <label for="password">Mot de passe :</label>
+        <div class="form-group">
+            <label for="password">Mot de passe :</label>
+            <input type="password" id="password" name="password" required>
+        </div>
 
-    <input type="password" id="password" name="password" required><br><br>
+        <button type="submit">Se connecter</button>
+    </form>
+</div>
 
-    <button type="submit">Se connecter</button>
-
-</form>
+<div id="footer"></div>  <!-- Conteneur du footer -->
 </body>
 </html>
+
+<script>
+    // Charger le header
+    fetch("header.html")
+        .then(response => response.text())
+        .then(data => document.getElementById("header").innerHTML = data);
+
+    // Charger le footer
+    fetch("footer.html")
+        .then(response => response.text())
+        .then(data => document.getElementById("footer").innerHTML = data);
+</script>
